Fix chrome blurry issue.

--- a/sources/js/components/ModalOverlay/ModalOverlay.module.css
+++ b/sources/js/components/ModalOverlay/ModalOverlay.module.css
@@ -88,6 +88,7 @@
         background-color: var(--color-black);
         overflow: hidden;
         will-change: opacity, transform;
+        -webkit-filter: blur(0);
 
         &:empty {
             display: none;
