--- a/sources/js/components/ToastOverlay/ToastOverlay.css
+++ b/sources/js/components/ToastOverlay/ToastOverlay.css
@@ -25,6 +25,7 @@
         box-shadow: 0px 0px 8px 4px rgba(34, 31, 34, 1);
         will-change: opacity, transform;
         transition: all 0.3s;
+        -webkit-filter: blur(0);
 
         & + & {
             margin-top: 16px;
